# urban-cli

./: .coverage  .coveragerc  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  LICENSE  NOTICE  README.md  SECURITY.md  TODO.md  coverage.xml  install.sh  pyproject.toml  pyrightconfig.json  pytest.ini  requirements.txt  setup.py  uninstall.sh
.github/: labeler.yml  release-drafter.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: codecov.yml  greetings.yml  python-app.yml  release-drafter.yml  sphinx.yml  stale.yml
docs/source/: about.md  about.rst  blog.md  blog.rst  conf.py  contributing.md  coverage.md  coverage.rst  documentation.rst  index.rst  installation.md  license.md  refactoring_guide.md  releases.md  rework.rst  versioning.md
docs/source/documentation/: api.rst  commands.rst  index.rst  utils.rst
docs/source/documentation/structs/: sentence.rst
scripts/: venv.sh
src/: __init__.py  __main__.py  _urban.py  definition.py  request.py  urban.py  urban_api.py  urban_commands.py  urban_exceptions.py  urban_utils.py
src/urban/: __about__.py  definition.py  parser.py  request.py
tests/: test_definition.py  test_index_valid.py  test_requests.py  test_soup_and_index.py  test_soup_objects.py  test_unit_integration.py  test_urban.py  test_words_to_string.py  words.json
tests/unit/: test_apply_word_to_url.py  test_send_exists_request.py  test_send_phrase_request.py
urban/: __init__.py  __main__.py  _urban.py  urban_api.py  urban_commands.py  urban_definition.py  urban_exceptions.py  urban_utils.py
urban/structs/: sentence.py
